k8s/microservices/queet-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: queet-service
spec:
  selector:
    app: queet-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5001
